--- a/TAREAS/MODULO 2/sicolo_unidad3/package.json
+++ b/TAREAS/MODULO 2/sicolo_unidad3/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "modules": "^0.4.0",
+    "node": "^17.7.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
